students/janst/janst.Lab03.compile.out
compiling files:
./main.cpp

g++ -std=c++14 -Wall -g -o"run_me" *.cpp
main.cpp:15:21: warning: ISO C++11 requires whitespace after the macro name
 #define VS_MEM_CHECK;
                     ^
In file included from main.cpp:8:0:
MyArray.h:140:11: error: declaration of ‘class T’
  template<typename T> friend std::ostream& operator<< (std::ostream& os, const MyArray<T>& myclass)
           ^
MyArray.h:9:11: error:  shadows template parm ‘class T’
 template <class T>
           ^
MyArray.h: In member function ‘std::__cxx11::string MyArray<T>::toString() const’:
MyArray.h:132:12: error: ‘endl’ was not declared in this scope
      ss << endl;
            ^
MyArray.h:132:12: note: suggested alternative:
In file included from /usr/include/c++/5/iostream:39:0,
                 from main.cpp:2:
/usr/include/c++/5/ostream:590:5: note:   ‘std::endl’
     endl(basic_ostream<_CharT, _Traits>& __os)
     ^
In file included from main.cpp:8:0:
MyArray.h: In instantiation of ‘MyArray<T>::Iterator& MyArray<T>::Iterator::operator++() [with T = int]’:
main.cpp:89:59:   required from here
MyArray.h:48:13: warning: reference to local variable ‘i’ returned [-Wreturn-local-addr]
    Iterator i = *this;
             ^
Compilation Failed 0
